--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -23,11 +23,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        # pip install flake8 
+        # pip install flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Static type check
       run: |
-        mypy EnergiBeregning.py
+        mypy --strict EnergiBeregning.py test_EnergiBeregning.py reference_calculations/
     # - name: Lint with flake8
     #  run: |
     #    # stop the build if there are Python syntax errors or undefined names
