--- a/.github/workflows/1-build-and-test.yml
+++ b/.github/workflows/1-build-and-test.yml
@@ -36,4 +36,4 @@ jobs:
     #    flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Run tests
       run: |
-        python test_Energiberegning.py
+        python test_EnergiBeregning.py
